# plexsnake

./: .flake8  .gitignore  LICENSE  Makefile  README.MD  app.py  pyproject.toml  requirements.txt  tox.ini
snake/: constants.py
snake/config/: default.yml
snake/experimental/playlist/: playlist_config.py
snake/experimental/playlist/v1/simple/: christmas.py
snake/plex/: client.py  models.py  plexcodex.py
snake/tvdb/: models.py  tvdb.py
snake/utils/: __init__.py  chronos.py  filesystem.py  tv.py
